Issue #9573: os.fork now works when triggered as a side effect of import (the wisdom of actually relying on this remains questionable!)